--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <title>Document</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+<title>Alura Plus</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com"&gt;
+<link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap&quot; rel="stylesheet">
 </head>
 <body>
-    
+
+<section class="pricipal container">
+<div class="container_caixa">
+    <h1 class="container_titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+<img src="img/Combo.png" alt="o combo+ é a junção do alura+ e o alura língua" class="container_imagem">
+</div>
+</section>
 </body>
 </html>
