--- a/index.html
+++ b/index.html
@@ -1,21 +1,118 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<title>Alura Plus</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="styles.css">
-<link rel="preconnect" href="https://fonts.googleapis.com"&gt;
-<link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap&quot; rel="stylesheet">
+    <title>Alura Plus</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"&gt;
+    <link rel="preconnect" href="https://fonts.gstatic.com&quot; crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap&quot; rel="stylesheet">
+
 </head>
 <body>
+    <section class="principal container">
+        <div class="container_caixa">
+            <h1 class="container_titulo">Com o combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+            <img src="img/Combo.png" alt="O combo+ é a junção do Alura+ e o Alura Língua" class="container_imagem">
+            <a href="www.alura.com.br&quot; class="container_botao">Assine por 12X de R$ 120,00</a>
+            <a href="ww.alura.com.br" class="container_botao botao_secundario">Assinar somente o Alura+</a>
+            <p class="container_aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
 
-<section class="pricipal container">
-<div class="container_caixa">
-    <h1 class="container_titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-<img src="img/Combo.png" alt="o combo+ é a junção do alura+ e o alura língua" class="container_imagem">
-</div>
-</section>
+        </div>
+    </section>
+
+    <section class="container secundario">
+        <img src="img/Plataformas.png" alt="Um monitor e um celular com a Alura plus aberta" class="container_imagem">
+        <div class="container_descricao">
+            <p class="descricao-texto"> Só o combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos  de diversas áreas da técnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+            <a href="www.alura.com.br&quot; class="container_botao secundario_botao" container>Assine o Combo+</a>
+
+        </div>
+        <img src="img/Telas.png" alt="Tela do Alura+ e Alura língua" class="secundario_imagem">
+    </section>
+
+    <section class="container secundario">
+        <div  class="container__descricao">
+            <p class="descricao__texto">
+                Só o combo+  oferece Alura+ e Alura Lingua juntos para você ter acesso a cursos de diverrsas áreas da
+                tecnologia e aprender inglês ou espanhol,onde e com quiser.
+            </p>
+            <a href="www.alura.com.br&quot; class="container__botao__secudario " container>Assine o combo+</a>
+         </div>
+         <img src="img/Telas.png" alt="Telas do Alura+ e Alura Lingua" class="secundario__imagem">
+    </section>
+
+    <section class="container secundario">
+        <img src="img/Notebook.png" alt="Notebook com páginas do curso HTML5 e CSS3 da Alura aberta"
+        class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Baixe seus cursos</h2>
+            <p class="descricao__texto">Baixe e assista quanda e onde quiser. Assim, seus favoritos estão sempre com
+                você, até mesmo sem internet.</p>
+
+        </div>
+    </section>
+    <section class="dispositivos">
+        <h2 class="dispositivos__titulos">Disponivel nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos__lista">
+         <li>
+            <img src="img/tv.png" alt="Ìcones de televisão">
+            <h3 class="Lista__item">TV</h3>
+         </li>
+
+          <li>
+            <img src="img/computador.png" alt="Ìcones de computador">
+            <h3 class="Lista__item">Computador</h3>
+         </li>
+
+         <li>
+            <img src="img/celular.png" alt="Ìcones de celular">
+            <h3 class="Lista__item">Celular</h3>
+         </li>
+
+
+        </ul>
+    </section>
+    <footer class="rodape">
+        <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
+        <ul class="rodape__lista">
+            <li class="lista__link">
+                <a href="#">Idioma</a>
+            </li>
+
+            <li class="lista__link">
+                <a href="#">Dispositivos compatíveis</a>
+
+            </li>
+            <li class="lista__link">
+                <a href="#">Contrato de assinaturas</a>
+            </li>
+             <li class="lista__link">
+                <a href="#">Politica de privacidade</a>
+            </li>
+
+             <li class="lista__link">
+                <a href="#">Proteção de dados no Brasil</a>
+            </li>
+
+             <li class="lista__link">
+                <a href="#">Anucios personalisados</a>
+            </li>
+
+             <li class="lista__link">
+                <a href="#">Ajuda</a>
+            </li>
+        </ul>
+        <p class="rodape__texto">2021 Alura, Alura+ e Alura Lingua. Todos os direitor reservados. Serviço de
+          assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+          <p class="rodape__texto"> Alura+ é um Serviço pago, baseado em assinatura e sujeito a termos e condições.
+            O Serviço Alura+ é comercializado por Aovs Sistemas de Informatica S.A, Rua vergueiro, 3185- Liberdade,
+             São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+         
+   
+    </footer>
+
+   
 </body>
 </html>
